// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AmeliproAutoCompleteField > Snapshots > renders the component with all properties filled in 1`] = `
<div
  class="
    amelipro-autocomplete
    d-flex
    flex-column
    flex-md-row
    modified-classes
  "
  id="modified-unique-id-container"
  style="
    max-width: modified-global-max-width;
    min-width: modified-global-min-width;
    width: var(--modified-global-width);
  "
>
  <div class="
    align-start
    amelipro-autocomplete__label-wrapper
    d-inline-flex
    mr-md-2
    mt-md-2
  ">
    <label
      class="
        amelipro-autocomplete__label
        mr-md-2
      "
      for="modified-unique-id"
      id="modified-unique-id-label"
      style="
        max-width: modified-label-max-width;
        min-width: modified-label-min-width;
      "
    >
      Modified label
      <span>
        <span aria-hidden="true">
          &nbsp;*
        </span>
        <span class="d-sr-only">
          &nbsp;Champ obligatoire
        </span>
      </span>
    </label>
  </div>
  <v-autocomplete-stub
    active="false"
    aria-expanded="false"
    aria-required="true"
    autocomplete="list"
    autofocus="false"
    autoselectfirst="false"
    bgcolor="ap-grey-lighten-2"
    chips="false"
    class="
      amelipro-text-field
      pt-0
    "
    clearable="false"
    clearicon="$clear"
    clearonselect="false"
    closablechips="false"
    closetext="$vuetify.close"
    color="ap-blue-darken-1"
    counter="false"
    density="compact"
    details="false"
    direction="horizontal"
    disabled="true"
    eager="true"
    error="false"
    errormessages=""
    filterkeys="title"
    filtermode="intersection"
    flat="false"
    focused="false"
    glow="false"
    hidedetails="true"
    hidenodata="false"
    hideselected="false"
    hidespinbuttons="false"
    iconcolor="false"
    id="modified-unique-id"
    itemchildren="false"
    itemprops="props"
    items="[object Object],[object Object],[object Object],[object Object]"
    itemtitle="title"
    itemtype="type"
    itemvalue="value"
    loading="false"
    maxerrors="1"
    menu="false"
    menuicon="$dropdown"
    menuprops="[object Object]"
    messages=""
    modelvalue="modified-model-value"
    multiple="false"
    noautoscroll="false"
    nodatatext="$vuetify.noDataText"
    nofilter="false"
    openonclear="false"
    opentext="$vuetify.open"
    persistentclear="false"
    persistentcounter="false"
    persistenthint="false"
    persistentplaceholder="false"
    placeholder="Modified placeholder"
    readonly=""
    returnobject="false"
    reverse="false"
    role="combobox"
    rules="() => "modified-rules",(value) => {
    let valid;
    if (Array.isArray(value)) {
      valid = value.length !== 0;
    } else {
      valid = Boolean(typeof value === "string" ? value.trim() : value);
    }
    return valid || __vite_ssr_import_0__.ruleMessage(errorMessages, "default");
  }"
    singleline="false"
    style="
      max-width: modified-input-max-width;
      min-width: modified-input-min-width;
      background-color: transparent;
    "
    tile="false"
    transition="false"
    type="text"
    validateon="lazy"
    variant="outlined"
  ></v-autocomplete-stub>
</div>
`;

exports[`AmeliproAutoCompleteField > Snapshots > renders the component with only required properties filled in 1`] = `
<div
  class="
    amelipro-autocomplete
    d-flex
    flex-column
  "
  id="required-unique-id-container"
>
  <div class="
    align-start
    amelipro-autocomplete__label-wrapper
    d-inline-flex
  ">
    <label
      class="amelipro-autocomplete__label"
      for="required-unique-id"
      id="required-unique-id-label"
    >
      Required label
      <!-- v-if -->
    </label>
  </div>
  <v-autocomplete-stub
    active="false"
    aria-expanded="false"
    aria-required="false"
    autocomplete="list"
    autofocus="false"
    autoselectfirst="false"
    bgcolor="ap-white"
    chips="false"
    class="
      amelipro-text-field
      pt-0
    "
    clearable="false"
    clearicon="$clear"
    clearonselect="false"
    closablechips="false"
    closetext="$vuetify.close"
    color="ap-blue-darken-1"
    counter="false"
    density="compact"
    details="false"
    direction="horizontal"
    disabled="false"
    eager="true"
    error="false"
    errormessages=""
    filterkeys="title"
    filtermode="intersection"
    flat="false"
    focused="false"
    glow="false"
    hidedetails="false"
    hidenodata="false"
    hideselected="false"
    hidespinbuttons="false"
    iconcolor="false"
    id="required-unique-id"
    itemchildren="false"
    itemprops="props"
    items=""
    itemtitle="title"
    itemtype="type"
    itemvalue="value"
    loading="false"
    maxerrors="1"
    menu="false"
    menuicon="$dropdown"
    menuprops="[object Object]"
    messages=""
    multiple="false"
    noautoscroll="false"
    nodatatext="$vuetify.noDataText"
    nofilter="false"
    openonclear="false"
    opentext="$vuetify.open"
    persistentclear="false"
    persistentcounter="false"
    persistenthint="false"
    persistentplaceholder="false"
    returnobject="false"
    reverse="false"
    role="combobox"
    rules=""
    singleline="false"
    tile="false"
    transition="false"
    type="text"
    variant="outlined"
  ></v-autocomplete-stub>
</div>
`;
